--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -104,10 +104,10 @@
   /* border: 2px solid yellow; */
   background-color: #09090D;
   height: 70px;
-  width: 100%;
+  /* width: 100%; */
   align-items: center;
   padding: 4%;
-  width: 100%;
+  width: 100.25%;
   border-radius: 15px 15px 0px 0px;
   box-sizing: border-box;
 
@@ -184,7 +184,9 @@
   /* min-height: 70%; */
   /* max-height: 70%; */
   overflow-y: scroll;
-  /* border: 1px solid white; */
+  border: 2px solid #343750;
+  border-top: none;
+  border-bottom: none;
   justify-content: center;
   align-items: center;
   /* position: relative; */
@@ -211,7 +213,7 @@
 .PosterPlaylistCard {
   /* border: 1px solid red; */
   height: 70px;
-  width: 99%;
+  width: 100%;
   /* border: 1px solid rgb(85, 85, 85); */
   /* border: 1px solid orange; */
   border-top: none;
