--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -7,11 +7,11 @@
 
 .YoutubeConversionsHeader {
   font-family: "Raleway-Regular";
-  font-size: 23px;
+  font-size: 20px;
   /* border: 3px cyan dotted; */
   /* width: 106%; */
   text-align: left;
-  margin: 5% 2%;
+  margin: 5% 2% 0% 2%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -104,4 +104,29 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.YTCI-ProvidedBySpotify {
+  /* border: 1px solid white; */
+  font-size: 12px;
+  align-items: center;
+  justify-content: center;
+  font-family: "Raleway-Regular";
+}
+
+.YTCI-ProvidedBySpotify span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid white; */
+  padding-top: 2px;
+}
+
+.YTCI-Legend {
+  height: 10px;
+  width: 10px;
+  background-color: #245E47;
+  margin: 5px;
+  border: 1px solid #318060;
 }
