--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@
   height: 30px !important;
   border-radius: 150px !important;
   font-size: 20px !important;
-  background: none !important;
+  background: none;
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
