--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -334,3 +334,92 @@
   /* height: 25px; */
   /* width: 25px; */
 }
+
+.SignOutAndSettingsContainer {
+  /* border: 1px solid red; */
+  width: 100%;
+  box-sizing: border-box;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#UserSettingsButton {
+  /* border: 1px solid white; */
+  width: 25px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#UserSettingsButton svg {
+  margin-left: 0;
+}
+
+.UserSettingsContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.65);
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 5% 5%;
+}
+
+.UserSettings {
+  background-color: #292B3E;
+  border-radius: 15px;
+  width: 100%;
+  justify-content: center;
+  /* align-items: center; */
+  padding: 4% 5% 8% 5%;
+  box-sizing: border-box;
+  text-align: left;
+}
+
+#DeleteAccountButton {
+  height: 50px;
+  width: 75%;
+  background-color: red;
+  border-radius: 10px;
+  border: none;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  margin-top: 5%;
+}
+
+.UserSettings span {
+  width: 100%;
+  margin-top: 5%;
+}
+
+
+#UserSettingsHeader {
+  font-family: "Raleway-Bold";
+}
+
+#UserSettingsDescription {
+  font-family: "Raleway-Regular";
+}
+
+.UserSettingsCloseContainer {
+  justify-content: flex-end;
+}
+
+#UserSettingsCloseButton {
+  border-radius: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 30px;
+  border: 1px solid white;
+  background: none;
+  color: white;
+  font-size: 22px;
+}
