Change app Title in index.html

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -303,7 +303,7 @@
   border-radius: 10px 0px 10px 10px;
   flex: 1;
   padding: 8%;
-  font-family: "Raleway-Regular";
+  font-family: "Raleway-Regular, Helvetica, Arial";
   /* text-align: left; */
   font-size: 16px;
   justify-content: center;
