Changed button colour Register Login on Stats

--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -293,7 +293,7 @@
 }
 
 .PublicRegisterLoginButton {
-  color: white;
+  color: #09090D;
   border: none;
   /* border: 2px solid red; */
   background: none;
@@ -305,6 +305,6 @@
   font-family: 'Arial';
   font-size: 16px;
   font-weight: 600;
-  background-color: #66B06E;
+  background-color: white;
   align-items: center;
 }
