--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -158,13 +158,15 @@
   justify-content: center;
   align-items: center;
   /* border: 3px solid red; */
+  padding: 5%;
+  box-sizing: border-box;
 }
 
 .HomeCreatePlaylistModal {
   position: absolute;
   /* width: 80%; */
-  width: 362px;
-  max-width: 362px;
+  width: 95%;
+  max-width: 95%;
   height: 250px;
   padding: 5%;
   box-sizing: border-box;
