--- a/src/styles/SharedNotAddedSection.css
+++ b/src/styles/SharedNotAddedSection.css
@@ -222,6 +222,9 @@
   /* margin-top: 24px; */
   /* margin-bottom: 20px; */
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ExportButton>svg {
