--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -54,7 +54,7 @@
 }
 
 .StatsInfoPodOpenButton {
-  color: white;
+  color: black;
   border: none;
   /* border: 2px solid red; */
   background: none;
@@ -62,17 +62,17 @@
   height: 50px;
   width: 100%;
   /* padding: 12px 50px; */
-  border-radius: 10px;
+  border-radius: 150px;
   font-family: 'Arial';
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 100;
   background-color: #1DB954;
   /* background-color: #66B06E; */
   align-items: center;
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  padding-top: 2px;
+  /* padding-top: 2px; */
   padding-right: 15px;
   box-sizing: border-box;
 }
@@ -207,7 +207,7 @@
 }
 
 .ContributorsContainer {
-  margin-top: 17px;
+  margin-top: 30px;
   /* height: 190px; */
 }
 
@@ -270,15 +270,15 @@
   top: -10.5px;
   left: -15px;
   font-size: 41px;
-  color: #66B06E;
+  color: #7316C6;
 }
 
 #PRLC-Star-2 {
   transform: rotate(-12deg);
   position: absolute;
-  top: -14px;
-  left: -19px;
-  font-size: 48px;
+  top: -15px;
+  left: -20px;
+  font-size: 50px;
   color: white;
 }
 
@@ -293,7 +293,7 @@
 }
 
 .PublicRegisterLoginButton {
-  color: #09090D;
+  color: #292b3e;
   border: none;
   /* border: 2px solid red; */
   background: none;
@@ -307,4 +307,12 @@
   font-weight: 600;
   background-color: white;
   align-items: center;
+}
+
+.PublicStatsError {
+  font-family: "Raleway-Regular";
+}
+
+.PublicStatsError span {
+  font-size: 14px;
 }
