--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -90,12 +90,14 @@
 /* --------------------------------- */
 
 .ChangeModalContainer {
+  /* border: 3px solid red; */
   position: absolute;
   top: 0;
   left: 0;
   z-index: 2;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
