Refactored msgTimeComponents to handle different date seperators, bugfix where 023, was appearing as year in people's playlists

--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -114,6 +114,7 @@
   align-items: center;
   justify-content: center;
   font-family: "Raleway-Regular";
+  padding-right: 15px;
 }
 
 .YTCI-ProvidedBySpotify span {
