--- a/src/App.css
+++ b/src/App.css
@@ -210,11 +210,12 @@
 
 .SpotifyCreditFooter {
   /* border: 1px solid red; */
-  font-size: 14px;
+  font-size: 13px;
   /* padding-bottom: 10%; */
   justify-content: center;
   align-items: center;
   font-family: "Raleway-ExtraLight";
+  padding-right: 15px;
 }
 
 #SpotifyCreditFooterLink {
