--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -58,7 +58,7 @@
   border: none;
   /* border: 2px solid red; */
   background: none;
-  margin-top: 5%;
+  margin-top: 10%;
   height: 50px;
   width: 100%;
   /* padding: 12px 50px; */
@@ -253,8 +253,9 @@
   color: #66B06E;
 }
 
+
 .PublicRegisterLoginContainer {
-  /* border: 1px solid white; */
+  /* border: 3px solid red; */
   padding: 5%;
   justify-content: center;
   align-items: center;
@@ -262,6 +263,7 @@
   /* margin-bottom: 5%; */
   position: relative;
   font-family: "Raleway-Regular";
+  overflow: hidden;
 }
 
 #PRLC-Star-1 {
@@ -293,7 +295,7 @@
 }
 
 .PublicRegisterLoginButton {
-  color: #292b3e;
+  color: white;
   border: none;
   /* border: 2px solid red; */
   background: none;
@@ -305,7 +307,7 @@
   font-family: 'Arial';
   font-size: 16px;
   font-weight: 600;
-  background-color: white;
+  background-color: #7316C6;
   align-items: center;
 }
 
@@ -340,4 +342,29 @@
 .PublicStatsError svg {
   /* border: 1px solid red; */
   padding-right: 30px;
+}
+
+.NewBanner {
+  height: 35px;
+  width: 100px;
+  position: absolute;
+  top: -3%;
+  left: -11%;
+  rotate: -41deg;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #7316c6;
+}
+
+.NewBanner span {
+  color: white;
+  rotate: +41deg;
+  font-size: 20px;
+}
+
+.NewBannerInner {
+  /* background-color: white; */
+  height: 15px;
+  width: 100px;
 }
