--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -54,7 +54,7 @@
 }
 
 .StatsInfoPodOpenButton {
-  color: black;
+  color: white;
   border: none;
   /* border: 2px solid red; */
   background: none;
@@ -62,11 +62,11 @@
   height: 50px;
   width: 100%;
   /* padding: 12px 50px; */
-  border-radius: 150px;
+  border-radius: 10px;
   font-family: 'Arial';
-  font-size: 14px;
-  font-weight: 500;
-  background-color: #1DB954;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: #7316c6;
   /* background-color: #66B06E; */
   align-items: center;
   justify-content: center;
@@ -307,7 +307,7 @@
   font-family: 'Arial';
   font-size: 16px;
   font-weight: 600;
-  background-color: #7316C6;
+  background-color: #66B06E;
   align-items: center;
 }
 
