--- a/src/styles/ChooseInputMenu.css
+++ b/src/styles/ChooseInputMenu.css
@@ -4,6 +4,7 @@
   width: 100%;
   justify-content: center;
   /* align-items: center; */
+  background: none;
 }
 
 .ChooseInputMenu button {
@@ -43,4 +44,23 @@
   /* flex: 1; */
   justify-content: flex-end;
   align-items: center;
+}
+
+#ChooseTimeWarning {
+  /* font-family: 'Arial'; */
+  padding: 0% 8%;
+  font-weight: 100;
+  /* font-size: 14px; */
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 5%;
+}
+
+#TimeConfirmIcon {
+  font-size: 48px;
+  margin-bottom: 8%;
+}
+
+#ChooseTimeWarningButton {
+  background-color: rgb(176, 152, 0);
 }
