--- a/src/styles/Help.css
+++ b/src/styles/Help.css
@@ -81,3 +81,23 @@
   font-family: 'Arial';
   font-weight: 900;
 }
+
+#TimeWarning {
+  /* font-family: 'Arial'; */
+  padding: 0% 8%;
+  font-weight: 100;
+  /* font-size: 14px; */
+  text-align: center;
+}
+
+#TimeWarningUnderline {
+  text-decoration: underline;
+}
+
+.HelpInputContent svg {
+  font-size: 32px;
+}
+
+.HelpGoogleContent svg {
+  font-size: 32px;
+}
