--- a/src/styles/Update.css
+++ b/src/styles/Update.css
@@ -1,5 +1,4 @@
 .Update {
-  /* border: 2px dashed yellow; */
   height: 97%;
   max-height: 97%;
   /* flex: 1; */
@@ -10,12 +9,31 @@
   /* position: relative; */
 }
 
+@keyframes helpBounce {
+  0% {
+    margin-bottom: 0px;
+  }
+
+  40% {
+    margin-bottom: 0px;
+  }
+
+  75% {
+    margin-bottom: 10px;
+  }
+
+  100% {
+    margin-bottom: 0px;
+  }
+}
+
 .UpdateGoBackContainer {
   /* border: 1px solid lime; */
   justify-content: flex-start;
   align-items: center;
   justify-content: space-between;
   height: 5%;
+  transition: background-color 0.7s ease;
 }
 
 .UpdateGoBackContainer button {
@@ -28,6 +46,11 @@
   justify-content: flex-start;
   align-items: center;
 }
+
+.UpdateGoBackContainer button:nth-child(1) {
+  transition: opacity 0.5s ease;
+}
+
 
 .UpdateGoBackContainer span {
   font-family: "Raleway-Regular";
@@ -42,4 +65,5 @@
   /* flex: 1; */
   /* justify-content: center; */
   /* align-items: center; */
+  transition: opacity 0.5s ease;
 }
