Refactor to make App background color change in the correct way when a) Help Tooltip and Help Hint b) when any modals appear

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,13 +11,13 @@
 
 .CreatePlaylistModalBackdrop {
   /* border: 1px solid red; */
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: black;
-  opacity: 0.67;
+  /* height: 100%; */
+  /* width: 100%; */
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
+  /* background-color: black; */
+  /* opacity: 0.67; */
 }
 
 .HomeContainer {
