--- a/src/App.css
+++ b/src/App.css
@@ -224,3 +224,14 @@
 #SpotifyCreditFooterLink {
   text-decoration: none !important;
 }
+
+.ModalBackdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0.67;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
