--- a/src/styles/Help.css
+++ b/src/styles/Help.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 
-.HelpBackdrop {
+/* .HelpBackdrop {
   position: absolute;
   top: 0;
   left: 0;
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-}
+} */
 
 .HelpTextDisplay {
   position: absolute;
