--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -297,7 +297,11 @@
   /* border: 1px solid white; */
   /* background-color: #292B3E; */
   /* border-radius: 10px; */
-  padding-right: 3.5%;
+  margin-right: 3.5%;
+  border-right: 1px solid rgba(255, 255, 255, 0.57);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.57);
+  border-top: none;
+  border-radius: 0px 0px 10px 10px;
   opacity: 1;
 }
 
@@ -308,11 +312,14 @@
   /* padding-right: 5.5%; */
   /* background-color: #292B3E; */
   /* border-radius: 10px; */
-  border-right: 1px solid white;
+  /* border-right: 2px solid white; */
+  opacity: 1;
+  z-index: 9999;
 }
 
 .HelpTooltipArrowBox {
   /* border: 1px solid yellow; */
+  border-bottom: 1px solid #292B3E;
   height: 20px;
   width: 20px;
   /* background-color: #292B3E; */
@@ -330,6 +337,7 @@
 .HelpTooltipBody {
   /* margin-right: 5.5%; */
   /* border: 1px solid blue; */
+  /* border-top: 5px solid #292B3E; */
   background-color: #292B3E;
   border-radius: 10px 0px 10px 10px;
   flex: 1;
@@ -339,8 +347,8 @@
   font-size: 16px;
   justify-content: center;
   align-items: center;
-  border-right: 1px solid white;
-  border-bottom: 1px solid white;
+  /* border-right: 1px solid white;
+  border-bottom: 1px solid white; */
   position: relative;
 }
 
