--- a/src/styles/ChangeModal.css
+++ b/src/styles/ChangeModal.css
@@ -13,6 +13,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   z-index: 999;
+  transition: opacity 0.25s;
 }
 
 .ChangeSearchLoading-false {
