--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -70,6 +70,8 @@
   justify-content: center;
   padding-bottom: 8%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .Auth input {
@@ -83,6 +85,8 @@
   font-size: 16px;
   padding: 0px 10px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .InputContainer {
@@ -185,4 +189,6 @@
   justify-content: center;
   padding-bottom: 8%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
