--- a/src/styles/ByGenreSection.css
+++ b/src/styles/ByGenreSection.css
@@ -2,7 +2,6 @@
   /* height: 30vh; */
   /* border: 2px dashed green; */
   /* align-items: flex-start; */
-  /* box-sizing: border-box; */
   /* overflow: hidden; */
   /* height: 523px; */
   /* padding: 15px; */
@@ -15,6 +14,8 @@
   background-color: #09090D;
   border-radius: 15px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .SectionHeader {
@@ -25,12 +26,13 @@
   padding-bottom: 3%;
   text-align: left;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .ByGenreSection>div {
   /* border: 1px solid red; */
   margin: 5px 0px;
-  /* box-sizing: border-box; */
 }
 
 path {
@@ -59,6 +61,8 @@ text {
   background: none;
   padding: 0px 30px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   margin-right: 4%;
   width: fit-content;
   /* min-width: 95px; */
