--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -13,6 +13,9 @@
   padding-bottom: 3%;
   text-align: left;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border: 1px solid lime;
 }
 
 .ByPosterPendingScreen {
@@ -90,11 +93,14 @@
 
 
 .ByPosterSectionContentWrapper {
-  /* border: 3px solid blue; */
+  border: 3px solid blue;
   min-height: 543px;
   max-height: 543px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   width: 100%;
+  /* margin-bottom: 0%; */
 }
 
 .PosterOptionContainer {
@@ -110,7 +116,10 @@
   width: 100%;
   border-radius: 15px 15px 0px 0px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 
+  border: 3px dashed pink;
 }
 
 .PosterOptionContainer span {
@@ -124,18 +133,22 @@
 }
 
 
-.OptionButtonsContainer {}
+.OptionButtonsContainer {
+  /* border: 1px solid yellow; */
+  height: 35px;
+}
 
 .OptionButtonsContainer button {
-  height: 25px;
+  height: 100%;
   width: 25px;
-  padding: 20px;
+  /* padding: 20px; */
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 35px;
+  font-size: 33px;
   background: none;
   border: none;
+  /* border: 1px solid red; */
   color: white;
 }
 
@@ -145,9 +158,10 @@
 }
 
 .PosterPlaylistAndSpinnerContainer {
-  /* border: 1px solid red; */
-  height: 70%;
-  max-height: 70%;
+  border: 1px solid yellow;
+  /* height: 70%; */
+  flex: 1;
+  /* max-height: 70%; */
   position: relative;
 }
 
@@ -164,6 +178,8 @@
   /* opacity: 0.5; */
   z-index: 9;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .PosterPlaylistSpinnerContainer svg {
@@ -176,15 +192,19 @@
 
 .PosterPlaylistContainer {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   position: absolute;
   top: 0;
   left: 1px;
-  height: 100%;
+  /* height: 100px; */
+  /* height: 100%; */
+  max-height: 100%;
   width: 100%;
   /* min-height: 70%; */
   /* max-height: 70%; */
   overflow-y: scroll;
-  /* border: 1px solid white; */
+  border: 1px solid red;
   justify-content: center;
   align-items: center;
   /* position: relative; */
@@ -218,6 +238,8 @@
   padding: 0px 10px;
   align-items: center;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   position: relative;
 }
 
@@ -276,9 +298,21 @@
   background-color: #09090D;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  /* flex: 1; */
   height: 96px;
   padding: 5%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   border-radius: 0px 0px 15px 15px;
+}
+
+.ByPostersTapOpenSpotifyFooter {
+  margin: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.ByPostersTapOpenSpotifyFooter span {
+  font-size: 12px;
 }
