--- a/src/styles/ByYearList.css
+++ b/src/styles/ByYearList.css
@@ -33,6 +33,8 @@
   /* border: 1px solid blue; */
   max-width: 182px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
