--- a/src/styles/ChangeModal.css
+++ b/src/styles/ChangeModal.css
@@ -9,9 +9,9 @@
   /* border: 1px solid yellow; */
   /* padding: 5%; */
   padding-top: 0;
+  box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
   z-index: 999;
   transition: opacity 0.2s;
 }
@@ -36,6 +36,8 @@
   height: 100%;
   position: relative;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 
@@ -44,6 +46,8 @@
   justify-content: space-between;
   padding: 2% 5% 5% 5%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   border-radius: 0px 0px 15px 15px;
 }
 
@@ -81,6 +85,8 @@
   z-index: 7;
   padding: 0% 5% 5% 5%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .SearchResultsDisplay {
