--- a/src/styles/ConversionCard.css
+++ b/src/styles/ConversionCard.css
@@ -29,6 +29,8 @@
   width: 80%;
   max-width: 80%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   /* border: 1px solid red; */
   height: 216px;
   max-height: 250px;
@@ -90,6 +92,8 @@
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   position: relative;
 }
 
@@ -123,6 +127,8 @@
   overflow: hidden;
   justify-content: center;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .YoutubeThumbnail {
@@ -141,6 +147,8 @@
   align-items: center;
   padding: 10px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .CurtailText {
@@ -175,6 +183,8 @@
   overflow: hidden;
   align-items: center;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   color: rgb(84, 84, 84);
   justify-content: center;
   font-size: 12px;
@@ -190,6 +200,8 @@
   overflow: hidden;
   align-items: center;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   /* height: 100px; */
   /* max-height: 100px; */
   /* border: 1px solid yellow; */
@@ -253,6 +265,8 @@
   font-size: 12px;
   margin-bottom: 3px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   /* min-width: 42%; */
   /* width: 100%; */
   /* max-width: 100%; */
