--- a/src/styles/GoogleDocInterface.css
+++ b/src/styles/GoogleDocInterface.css
@@ -7,6 +7,8 @@
 
 .GoogleInputTextInterface {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   /* border: 3px cyan dotted; */
   /* flex: 1; */
   /* height: 96%; */
@@ -36,6 +38,8 @@
   font-size: 16px;
   padding: 0px 10px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   margin-bottom: 0;
 }
 
