--- a/src/styles/PosterRibbon.css
+++ b/src/styles/PosterRibbon.css
@@ -22,6 +22,8 @@
   /* justify-content: center; */
   padding-left: 5px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   /* filter: saturate(90%) brightness(75%); */
 }
 
