--- a/src/styles/PrivacyPolicy.css
+++ b/src/styles/PrivacyPolicy.css
@@ -14,6 +14,8 @@
   scrollbar-color: white;
   padding: 5%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .PrivacyPolicy {
