--- a/src/styles/SharedNotAddedSection.css
+++ b/src/styles/SharedNotAddedSection.css
@@ -16,6 +16,8 @@
 .SharedNotAddedSectionPadding {
   padding: 5%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .SectionHeader {
@@ -26,6 +28,8 @@
   padding-bottom: 3%;
   text-align: left;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .SharedNotAddedSectionPadding>div:last-child {
@@ -42,6 +46,8 @@
   flex-direction: column;
   margin-bottom: 50px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   /* border: 3px solid yellow; */
 }
 
@@ -92,6 +98,8 @@
   width: 100%;
   padding: 18px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   background-color: #09090D;
   display: flex;
   flex-direction: column;
@@ -122,6 +130,8 @@
   height: 90px;
   padding: 0% 4%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   display: flex;
   flex-direction: row;
   text-decoration: none;
@@ -141,6 +151,7 @@
   background-color: #09090D;
 
   border-radius: 0px 0px 15px 15px;
+  border: 3px solid red;
 }
 
 .SharedNotAddedYoutubeCard {
@@ -151,6 +162,8 @@
   margin: 12px 0px;
   padding: 0% 4%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   display: flex;
   flex-direction: row;
 }
@@ -190,6 +203,8 @@
   width: 45%;
   padding: 0px 8px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   font-size: 13px;
   font-family: "Arial";
   display: flex;
