--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -62,6 +62,8 @@
   justify-content: center;
   padding-bottom: 8%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .Signup input {
@@ -75,6 +77,8 @@
   font-size: 16px;
   padding: 0px 10px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .InputContainer {
@@ -176,6 +180,8 @@
   align-items: center;
   padding-bottom: 8%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .authSubmitButton:disabled {
