--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -13,6 +13,8 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   position: relative;
 }
 
@@ -75,6 +77,8 @@
   /* padding-top: 2px; */
   padding-right: 15px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .StatsInfoPodOpenButton img {
@@ -92,6 +96,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   overflow-y: scroll;
 }
 
@@ -115,6 +121,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   align-items: flex-start;
 }
 
@@ -318,6 +326,8 @@
   align-items: center;
   padding: 5%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .PublicStatsError span {
