--- a/src/styles/Update.css
+++ b/src/styles/Update.css
@@ -7,6 +7,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   /* position: relative; */
+  border: 3px solid yellow;
 }
 
 @keyframes helpBounce {
