--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -1,7 +1,12 @@
 .YoutubeConversionInterface {
-  /* border: 3px cyan dotted; */
+  border: 3px cyan dotted;
   height: 100%;
   max-height: 100%;
+  width: 100%;
+  max-width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   /* position: relative; */
 }
 
@@ -18,16 +23,19 @@
 }
 
 .YoutubeConversionsDisplayContainer {
-  /* border: 2px solid red; */
+  border: 2px solid red;
   background-color: #09090D;
   border-radius: 15px;
   padding: 5% 5%;
   min-height: 0;
   flex: 1;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .YoutubeConversionsList {
-  /* border: 2px solid limegreen; */
+  border: 2px solid limegreen;
   overflow-x: hidden;
   min-height: 0;
   /* min-height: 100%; */
@@ -35,6 +43,7 @@
   width: 100%;
   background-color: #1B1C2A;
   flex: 1;
+  /* overflow-y: hidden; */
   overflow-y: scroll;
   /* padding: 5%; */
   align-items: center;
