--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -419,13 +419,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.65);
+  /* background-color: rgba(0, 0, 0, 0.65); */
+  background: none;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   padding: 5% 5%;
+  z-index: 5;
 }
 
 .UserSettings {
