--- a/src/styles/Update.css
+++ b/src/styles/Update.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   /* position: relative; */
   border: 3px solid yellow;
+  /* background-color: purple; */
 }
 
 @keyframes helpBounce {
@@ -37,7 +38,7 @@
   transition: background-color 0.7s ease;
 }
 
-.UpdateGoBackContainer button {
+.UpdateGoBackButton {
   height: 100%;
   width: 40%;
   background: none;
@@ -53,16 +54,20 @@
 }
 
 
-.UpdateGoBackContainer span {
+.UpdateGoBackContainer span {}
+
+.UpdateGoBackButton span {
   font-family: "Raleway-Regular";
   font-size: 22px;
   margin-left: 12px;
 }
 
 .InfoArea {
-  /* border: 1px solid hotpink; */
-  height: 95%;
-  max-height: 95%;
+  border: 5px solid orange;
+  min-height: 0;
+  flex: 1;
+  /* height: 95%; */
+  /* max-height: 95%; */
   /* flex: 1; */
   /* justify-content: center; */
   /* align-items: center; */
