--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -15,7 +15,7 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  border: 1px solid lime;
+  /* border: 1px solid lime; */
 }
 
 .ByPosterPendingScreen {
@@ -93,7 +93,7 @@
 
 
 .ByPosterSectionContentWrapper {
-  border: 3px solid blue;
+  /* border: 3px solid blue; */
   min-height: 543px;
   max-height: 543px;
   box-sizing: border-box;
@@ -119,7 +119,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 
-  border: 3px dashed pink;
+  /* border: 3px dashed pink; */
 }
 
 .PosterOptionContainer span {
@@ -158,7 +158,7 @@
 }
 
 .PosterPlaylistAndSpinnerContainer {
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
   /* height: 70%; */
   flex: 1;
   /* max-height: 70%; */
@@ -204,7 +204,7 @@
   /* min-height: 70%; */
   /* max-height: 70%; */
   overflow-y: scroll;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   justify-content: center;
   align-items: center;
   /* position: relative; */
