--- a/src/styles/SharedNotAddedSection.css
+++ b/src/styles/SharedNotAddedSection.css
@@ -151,7 +151,7 @@
   background-color: #09090D;
 
   border-radius: 0px 0px 15px 15px;
-  border: 3px solid red;
+  /* border: 3px solid red; */
 }
 
 .SharedNotAddedYoutubeCard {
