--- a/src/styles/Update.css
+++ b/src/styles/Update.css
@@ -7,7 +7,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   /* position: relative; */
-  border: 3px solid yellow;
+  /* border: 3px solid yellow; */
   /* background-color: purple; */
 }
 
@@ -63,7 +63,7 @@
 }
 
 .InfoArea {
-  border: 5px solid orange;
+  border: 5px solid transparent;
   min-height: 0;
   flex: 1;
   /* height: 95%; */
