--- a/src/styles/Preview.css
+++ b/src/styles/Preview.css
@@ -27,6 +27,25 @@
   justify-content: center;
   align-items: center;
   color: white;
+  text-align: center;
+  /* padding-top: 0px; */
   /* color: gray; */
   /* box-shadow: 2px 3px 0px rgba(255, 255, 255, 0.3); */
+}
+
+.Preview svg {
+  /* border: 1px solid red; */
+  /* height: 100%; */
+  width: 100%;
+  /* padding-top: 1px; */
+  /* padding-left: 5px; */
+}
+
+#ContrPreviewPlaySVG {
+  /* border: 1px solid green; */
+  padding-left: 2px;
+}
+
+#ContrPreviewPauseSVG {
+  font-size: 22px;
 }
