--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@
   border-radius: 15px;
   height: 100%;
   max-height: 100%;
-  width: 362px;
-  max-width: 362px;
+  width: 100vw;
+  max-width: 400px;
   box-sizing: border-box;
   overflow: hidden;
   font-family: sans-serif, Helvetica, Arial, sans-serif;
@@ -235,6 +235,7 @@
   background-color: black;
   opacity: 0.67;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: 2;
+  /* border: 3px solid red; */
 }
