--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -163,6 +163,7 @@
   flex: 1;
   /* max-height: 70%; */
   position: relative;
+  background-color: #4a49642a;
 }
 
 .PosterPlaylistSpinnerContainer {
@@ -170,7 +171,7 @@
   top: 0px;
   left: 0px;
   background-color: #343750;
-  width: 99.5%;
+  width: 100%;
   height: 100%;
   /* border: 2px solid green; */
   justify-content: center;
@@ -231,7 +232,7 @@
 .PosterPlaylistCard {
   /* border: 1px solid red; */
   height: 70px;
-  width: 99%;
+  width: 99.5%;
   /* border: 1px solid rgb(85, 85, 85); */
   /* border: 1px solid orange; */
   border-top: none;
