--- a/src/styles/ContributorsSection.css
+++ b/src/styles/ContributorsSection.css
@@ -32,6 +32,11 @@
   color: white;
   background-color: #7316C6;
   margin-bottom: 2%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid red; */
 }
 
 .ContribEdit-true {
@@ -202,6 +207,7 @@
   /* border: 1px solid red; */
   margin-top: 5%;
   width: 47%;
+  font-size: 16px;
 }
 
 .EditRename {
