--- a/src/styles/ConversionCard.css
+++ b/src/styles/ConversionCard.css
@@ -298,7 +298,7 @@
   height: 40px;
   width: 100%;
   border-radius: 5px;
-  border: none;
+  /* border: none; */
   background-color: #7316C6;
   font-family: Arial;
   font-size: 16px;
@@ -310,6 +310,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* border: 1px solid yellow; */
 }
 
 .MatchInspectedMenu button svg {
@@ -373,10 +374,6 @@
   color: #F27A7A;
 }
 
-#ReIncludeButton {
-  background-color: #66B06E;
-}
-
 .YTC-Wrapper {
   position: relative;
   /* border: 1px solid yellow; */
@@ -421,17 +418,17 @@
   border: none;
   /* background-color: #7316C6; */
   background-color: #7316C6;
-
   font-family: Arial;
-  font-size: 16px !important;
+  font-size: 16px;
   font-weight: 600;
   /* margin-top: 24px; */
   /* margin-top: 5%; */
   /* margin-bottom: 20px; */
-  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0;
+  color: white;
 }
 
 .YTC-ButtonsMenuContainer button:disabled {
@@ -456,11 +453,16 @@
 .CC-Side-Exclude-true {
   /* background-color: #900000 !important; */
   background-color: #7316C6;
-
 }
 
 .CC-Side-Exclude-false {
   background-color: #66b08c !important;
   border-radius: 10px 10px 10px 10px !important;
   box-shadow: inset 2px 2px px 0px #38633d;
+  /* font-size: 16px !important; */
+  /* border: 1px solid yellow !important; */
 }
+
+/* #ReIncludeButton {
+  background-color: #66B06E;
+} */
