--- a/src/styles/PlaylistCard.css
+++ b/src/styles/PlaylistCard.css
@@ -78,10 +78,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
 }
 
 .HomePlaylistCardButtonsContainer button:first-child {
   font-size: 38px;
+  /* border: 3px solid red; */
 }
 
 .HomePlaylistCardButtonsContainer span {
