--- a/src/App.css
+++ b/src/App.css
@@ -239,3 +239,25 @@
   z-index: 2;
   /* border: 3px solid red; */
 }
+
+.GoogleLoginTest {
+  border: 1px solid white;
+  color: white;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.GoogleLoginTest h1 {
+  margin-bottom: 15px;
+}
+
+.GoogleLoginTest button {
+  height: 50px;
+  width: 200px;
+  border-radius: 15px;
+  border: none;
+}
