--- a/src/styles/GoogleDocInterface.css
+++ b/src/styles/GoogleDocInterface.css
@@ -147,6 +147,25 @@ textarea::-webkit-scrollbar-thumb {
   display: flex;
 }
 
+.MoreDetails {
+  margin-top: 4%;
+  width: 100%;
+  font-size: 13px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 1px solid rgba(255, 255, 255, 0.244);
+  padding: 10px;
+  padding-bottom: 12px;
+  border-radius: 10px;
+}
+
+#GooglePrivacyPolicyLink {
+  text-decoration: underline;
+  width: 200px;
+}
+
 .GoogleInputTextInterfaceMessage ul {
   margin: 0;
   padding-left: 6%;
