--- a/src/styles/GoogleDocInterface.css
+++ b/src/styles/GoogleDocInterface.css
@@ -9,7 +9,6 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  /* border: 3px cyan dotted; */
   /* flex: 1; */
   /* height: 96%; */
   margin-top: 5%;
@@ -17,15 +16,20 @@
   /* height: 30%; */
   border-radius: 15px;
   border: none;
-  background-color: #09090D;
+  /* background-color: #09090D; */
+  /* background-color: #09090d40; */
+  background-color: rgba(255, 255, 255, 0.042);
   padding: 5%;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
+  height: 240px;
 }
 
-.GoogleInputTextArea {
-  width: 100%;
+.GoogleInputTextInterface button:nth-child(3) {
+  background-color: #66B06E;
 }
+
+.GoogleInputTextArea {}
 
 .GoogleFileInput {
   height: 50px;
@@ -244,4 +248,39 @@ textarea::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#GoogleButton {
+  padding: 0;
+  margin: 0;
+  height: 46px;
+  width: 191px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  border: none;
+  margin-top: 10px;
+}
+
+#GoogleButton img {
+  margin: 0;
+  height: 46px;
+  width: 191px;
+}
+
+.GoogleSignInContainer button {
+  margin: 0;
+  padding: 0;
+  width: 191px;
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  border: none;
+}
+
+.GITI-Dark {
+  background-color: #09090D;
 }
