--- a/src/styles/GoogleDocInterface.css
+++ b/src/styles/GoogleDocInterface.css
@@ -16,9 +16,9 @@
   /* height: 30%; */
   border-radius: 15px;
   border: none;
-  /* background-color: #09090D; */
+  background-color: #09090D;
   /* background-color: #09090d40; */
-  background-color: rgba(255, 255, 255, 0.042);
+  /* background-color: rgba(255, 255, 255, 0.042); */
   padding: 5%;
   justify-content: center;
   /* align-items: center; */
